--- a/css/index.css
+++ b/css/index.css
@@ -1,57 +1,78 @@
-/*CSS RESET*/
-html, body, div, span, applet, object, iframe,  
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
-a, abbr, acronym, address, big, cite, code,  
-del, dfn, em, img, ins, kbd, q, s, samp,  
-small, strike, strong, sub, sup, tt, var,  
-b, u, i, center,  
-dl, dt, dd, ol, ul, li,  
-fieldset, form, label, legend,  
-table, caption, tbody, tfoot, thead, tr, th, td,  
-article, aside, canvas, details, embed,  
-figure, figcaption, footer, header, hgroup,  
-menu, nav, output, ruby, section, summary,  
-time, mark, audio, video {  
-margin: 0;  
-padding: 0;  
-border: 0;  
-font-size: 100%;  
-font: inherit;  
-vertical-align: baseline;  
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 /*GENERAL STYLES*/
 html{
     font-size:62.5%;
 }
 body{
-    /* font-size:.3rem; */
+    font-size:.1em;
     line-height: 1;
     font-family: 'Montserrat', sans-serif;	
 }
 h1, p, .name, .bio {	
     font-family:'Open Sans', sans-serif;	
     text-align: center;	
-    margin: 4%;	
+    margin: 3%;	
 }	
 h1{
-    
-    font-size:4rem;
-    margin:0;
+    font-size:3.5rem;
+    margin:10;
 }
 h2{
-    font-size: .1rem;
+    padding:1rem;
+    font-size: 90%;
+    /* padding-left: 7rem; */
 }
+
 a {	
     text-decoration: none;	
     color: black;
-    font-size:2.5rem;	
+    font-size:1.5rem;
 }	
 a:hover {	
     font-weight: bold;	
-}	
-.name{	
-    font-size: 100%;	
-    font-weight: 200;	
 }	
 img {	
     height:39rem;	
@@ -66,64 +87,76 @@ img {
 img:hover {	
     opacity: 80%;	
 }	
-
 /*HEADER STYLES */
 header{
-    display: flex;
+    display:flex;
     justify-content: center;
-    align-content: center;
-    text-align: center;
+    /* border: 3px solid blue; */
+    margin-top: 1.6rem;
 }
 nav{
-    width:30%;
+    width:100%;
     display:flex;
-    justify-content:center;
-    text-align: center;
+    justify-content:space-evenly;
     margin-top:5%;
 }
 nav a{
-    display:flex;
-    justify-content:space-between;
-    /* flex-wrap: wrap; */
-    margin-top:5%;
-    font-size: .5rem;
-    color:#e40f0f;
+    color:#626262;
 }
 nav span{
-    border-left:1px solid#626262;
-
+    border-right:2px solid #626262;
+    padding:3em;
+    /* border: 3px solid blue; */
 }
+p{
+    /* border: 3px solid blue; */
+    font-size: .5%;
+    width:1%
+    height:fit-content ;
+}
+
+.flex-nav ul {
+    display: flex;
+    padding-bottom: 5%;
+    padding:1rem;
+    width:18rem;
+}
+.flex-nav li {
+    flex:1;
+} 
+
 /*Title Section Styles*/
 .title-container{
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-.title-container div {	
+.title-container div {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
     background-position: center;	
     color: white;	
-    width:80%;
+    width:100%;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height:60vh;
-    margin:5% 0;
+    margin: 3%;
 }	
 .title-container div:hover {	
     opacity: 80%;	
 }	
 .title-container hr{
-    width:80%;
+    display:flex;
+    width:80%;   
 }
 button{
-    padding:1% 3%;
-    font-size: 1.6rem;
+    padding:1% 5%;
+    font-size: 1.0rem;
     border-radius:6px;
     border:2px solid #626262;
     box-shadow: 2px 2px 1px #626262;
-    transition: 2s;
+    transition: .3s;
 }
 button:hover{
     background-color:#626262;
@@ -134,15 +167,72 @@ button:hover{
 /*Artists Section Styles */
 .artists-container{
     display:flex;
-    justify-content: space-around;
-    width:80%;
+    flex-wrap: wrap;
+    /* justify-content:space-around; */
+    width:100%;
     margin:0 auto;
+
+}
+.artist1 {
+    flex:1 1 50%;
+    /* border: 3px solid blue;  */
+}
+.artist1 h2{
+    padding-left: 9rem;;
+}
+.artist2 {
+    flex:1 1 50%;
+    /* border: 3px solid blue;  */
+}
+.artist2 h2{
+    padding-left: 5rem;;
+}
+.artist1 img {
+    /* border: 3px solid blue; */
+    /* flex:1 1 50%; */
+    width:70%;
+    height: 45%;
+}
+.artist2 img {
+    /* flex:1 1 50%; */
+    width:70%;
+    height: 45%;
 }
 
-.artist{
-    width:40%;
-    text-align:center;
-}
-.artist img{
-    width:100%;
-}
+@media screen and (max-width: 499px) {
+    .title-container div {
+        /* border: 3px solid blue;  */
+        width:100%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height:30vh;
+        margin: 3%;
+    }
+    .artists-container{
+        display:flex;
+        /* flex-wrap: wrap; */
+        flex-direction: column;
+        width:100%;
+        margin:0 auto;
+    
+    }
+    .artist1  {
+        /* border: 3px solid blue; */
+        /* width:60%;
+        height: 35%; */
+        flex:1;
+    }
+    .artist2  {
+        flex:1;
+        /* width:60%;
+        height: 45%; */
+    }
+    h2{
+        padding:1rem;
+        padding-left:8rem;
+        font-size: 80%;
+    }
+  }
+  
